Mon May 21 12:01:30 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * orbsvcs/tests/Bug_2925_Regression/run_test_ipv6.pl:
        * orbsvcs/tests/Bug_2925_Regression/run_test.pl:
        * orbsvcs/tests/Bug_2925_Regression/README:
          On some test systems the timeout for client and server
          was too short. So, extended the timeout and added README.
          Bug#2925.

Thu May 17 16:38:23 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * MPC/config/taoidldefaults.mpb:

          Only set the tao_idl, tao_idl_dep and tao_idlflags template
          variables if we're not generating for automake.  It does not need
          these settings.

Thu May 17 12:14:08 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * utils/catior/catior.cpp:

          Added a missing newline from an error message.

Thu May 17 12:08:15 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Bug_2377_Regression/Makefile.am:

          The source files were changed in the change from
          Mon May  7 16:08:17 UTC 2007.  The Makefile.am needs to be
          manually updated.

Thu May 17 12:02:12 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IORManipulation/filter/Makefile.am:

          It wasn't my last attempt.  I'm adding the TAO_PortableServer
          library to the link list.

Wed May 16 16:26:32 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/IORManipulation/filter/Makefile.am:

          Hopefully my last attempt to correct this file.

Wed May 16 09:33:38 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connector.cpp:
          There was a compile error on SunOS introduced with the
          fix for bug#2925. Fixed it.

        * tao/Profile.h:
          Fix for compile warnings generated because of improper
          class member initialization.

Wed May 16 07:30:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
