@@ -9,13 +9,19 @@ use lib "$ENV{ACE_ROOT}/bin";
 use PerlACE::Run_Test;
 
 $status = 0;
-$iorfile1 = PerlACE::LocalFile ("test1.ior");
+$iorfile1base = "test1.ior";
+$iorfile1 = PerlACE::LocalFile ("$iorfile1base");
 $iorfile2 = PerlACE::LocalFile ("test2.ior");
 
 unlink $iorfile1;
 unlink $iorfile2;
 
+if (PerlACE::is_vxworks_test()) {
+$SV1 = new PerlACE::ProcessVX ("server", "-o $iorfile1base");
+}
+else {
 $SV1 = new PerlACE::Process ("server", "-o $iorfile1");
+}
 $SV2 = new PerlACE::Process ("server", "-o $iorfile2");
 $CL  = new PerlACE::Process ("client", "-i file://$iorfile1 -j file://$iorfile2");
 
@@ -26,7 +32,7 @@ $SV1->Spawn ();
 if (PerlACE::waitforfile_timed ($iorfile1,
                         $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$iorfile1>\n";
-    $SV1->Kill (); 
+    $SV1->Kill ();
     exit 1;
 }
 
@@ -36,7 +42,7 @@ if (PerlACE::waitforfile_timed ($iorfile2,
                         $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$iorfile2>\n";
     $SV1->Kill ();
-    $SV2->Kill (); 
+    $SV2->Kill ();
     exit 1;
 }
 
@@ -47,7 +53,7 @@ if ($client != 0) {
     $status = 1;
 }
 
-$server = $SV1->WaitKill (10);
+$server = $SV1->WaitKill (15);
 
 if ($server != 0) {
     print STDERR "ERROR: server 1 returned $server\n";
@@ -56,7 +62,7 @@ if ($server != 0) {
 
 unlink $iorfile1;
 
-$server = $SV2->WaitKill (10);
+$server = $SV2->WaitKill (15);
 
 if ($server != 0) {
     print STDERR "ERROR: server 2 returned $server\n";
@@ -82,7 +88,7 @@ if (PerlACE::waitforfile_timed ($iorfile2,
                         $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$iorfile2>\n";
     $SV1->Kill ();
-    $SV2->Kill (); 
+    $SV2->Kill ();
     exit 1;
 }
 
